[gd_scene load_steps=4 format=3 uid="uid://00m8s0mqvnd6"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_lh5wj"]
[ext_resource type="PackedScene" uid="uid://dl3ysciev0wmm" path="res://scenes/board.tscn" id="2_d6480"]
[ext_resource type="PackedScene" uid="uid://bxtrch4lakwhn" path="res://scenes/deck.tscn" id="3_n00ev"]

[node name="Game" type="Node2D"]
script = ExtResource("1_lh5wj")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="NewGameButton" type="Button" parent="."]
offset_left = 356.0
offset_top = -311.0
offset_right = 452.0
offset_bottom = -280.0
text = "Start Game"

[node name="QuitButton" type="Button" parent="."]
offset_left = 354.0
offset_top = -273.0
offset_right = 451.0
offset_bottom = -242.0
text = "End game"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="SessionList" type="ItemList" parent="."]
offset_left = 465.0
offset_top = -314.0
offset_right = 563.0
offset_bottom = -175.0

[node name="Board" parent="." instance=ExtResource("2_d6480")]
position = Vector2(-27, 106)

[node name="Board2" parent="." instance=ExtResource("2_d6480")]
position = Vector2(-23, -95)

[node name="Deck" parent="." instance=ExtResource("3_n00ev")]
position = Vector2(492, 220)

[node name="Deck2" parent="." instance=ExtResource("3_n00ev")]
visible = false
position = Vector2(492, -234)

[connection signal="item_activated" from="SessionList" to="." method="_on_session_list_item_activated"]
